--- a/Form1.resx
+++ b/Form1.resx
@@ -169,6 +169,9 @@
         7+0oRPnTrXkEqU+d5f9ToN4DKJBS7l3veggIADs=
 </value>
   </data>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>125, 20</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAUAAAAAAAEAIADRVQAAVgAAACAgAAABACAAqBAAACdWAAAgIAAAAQAIAKgIAADPZgAAEBAAAAEA
